# aitrader

./: .cursorignore  .cursorindexingignore  .env  .env.example  .gitignore  AGENTS.md  DATA.md  ETF_AUTO_UPDATE_README.md  GUIDE.md  PLAN.md  README.md  STOCK_SELECTION.md  aitrader-web.service.example  aitrader_vs_aitrader_037_comparison.md  ashare.csv  auto_update_etf_data.py  backtrader_engine.py  backtrader_strategy.py  bt_algos_extend.py  bt_engine.py  check_signals.py  config.py  model.py  plan.md  pyproject.toml  requirements.txt  run_ashare_signals.py  run_etf_portfolio_backtest.py  run_etf_signals.py  run_multi_strategy_signals.py  run_short_term_signals.py  setup_cron.sh  test_batch_query.py  update.md  web_server.pid  web_server.sh  如何使用.txt  系统说明文档.md
.claude/: settings.json  settings.local.json
alpha/: factor_engine.py  load_bar_df.py  polar_loader.py  stock_engine.py  task_config.py
core/: __init__.py  ashare_commission.py  ashare_constraints.py  backtest_parallel.py  backtest_utils.py  backtrader_algos.py  backtrader_engine.py  backtrader_inds.py  backtrader_strategy.py  bt_engine.py  etf_universe.py  multi_factor_etf_filter.py  portfolio_bt_engine.py  portfolio_metrics.py  portfolio_tracker.py  position_manager.py  resource_manager.py  sector_analyzer.py  smart_etf_filter.py  smart_stock_filter.py  stock_selector.py  stock_universe.py  strategy_loader.py
database/: __init__.py  db_manager.py  factor_cache.py  import_to_duckdb.py  pg_manager.py
datafeed/: csv_dataloader.py  db_dataloader.py  factor_expr.py  factor_extends.py  factor_fundamental.py  factor_qlib.py  mytt.py
deap_factor/: backtest.py  deap_engine.py  deap_patch.py  init_pset.py  utils.py
docs/: ETF_OPTIMIZATION_SUMMARY.md  akshare_sector_data_guide.md  project-structure.md
examples/: ashare_strategy_example.py
monitoring/: system_monitor.py
postgres_config/: DEPLOYMENT_GUIDE.md  OPTIMIZATION_SUMMARY.md  add_indexes.sql  postgresql.conf
web/: __init__.py  (+2 more)
(+331 files in other folders)
