[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aitrader"
version = "0.1.0"
description = "A-share research, backtest, and signal-generation platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "backtrader",
  "ffn",
  "loguru",
  "bt",
  "jupyter",
  "pyfolio-reloaded",
  "pandas",
  "tqdm",
  "sqlalchemy>=2.0.0",
  "python-dotenv>=1.0.0",
  "pymysql>=1.1.0",
  "arxiv>=2.0.0",
  "pdfplumber>=0.10.0",
  "openai>=1.0.0",
  "requests>=2.31.0",
]

[project.scripts]
aitrader-ashare-signals = "aitrader.app.cli.ashare_signals:main"
aitrader-short-term = "aitrader.app.cli.short_term_signals:main"
aitrader-stock-backtests = "aitrader.app.cli.stock_backtests:main"
aitrader-arxiv = "aitrader.app.cli.arxiv_pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["aitrader*"]
